kubernetes/ingress/cart-order-service-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cart-order-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: cart-order-service.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cart-order-service
                port:
                  number: 8080
