kubernetes/ingress/payment-invoice-service-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payment-invoice-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: payment-invoice-service
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: payment-invoice-service-service
                port:
                  number: 8080
